# cookiecutter-nautobot-app

./: .flake8  .gitignore  .ipdb  .readthedocs.yaml  .yamllint.yml  CONTRIBUTING.md  README.md  TODO  cookiecutter.json  mkdocs.yml  pyproject.toml  tasks.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/: LICENSE  README.md  invoke.example.yml  invoke.mattermost.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/.github/: CODEOWNERS  copilot-instructions.md
nautobot-app-chatops/{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  rebake.yml
nautobot-app-chatops/{{ cookiecutter.project_slug }}/development/: Dockerfile-mattermost  check_migrations.py  configure_chatops.sh  creds.example.env  development_mysql.env  docker-compose.dev.yml  docker-compose.mattermost-dev.yml  docker-compose.postgres.yml  mattermost-docker-entry.sh  mattermost.env  mattermost_config_docker.json  mysql_init  nautobot_config.py  towncrier_header.txt
nautobot-app-chatops/{{ cookiecutter.project_slug }}/development/mattermost/: nautobot_bootstrap.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/docs/: index.md  requirements.txt
nautobot-app-chatops/{{ cookiecutter.project_slug }}/docs/admin/: install.md  upgrade.md
nautobot-app-chatops/{{ cookiecutter.project_slug }}/docs/dev/: arch_decision.md  release_checklist.md
nautobot-app-chatops/{{ cookiecutter.project_slug }}/docs/user/: external_interactions.md
nautobot-app-chatops/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/: __init__.py  app-config-schema.json  forms.py  models.py  navigation.py  tables.py  urls.py  views.py  worker.py  {{ cookiecutter.chatops_interactive_command }}.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/api/: __init__.py  serializers.py  urls.py  views.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/migrations/: __init__.py
nautobot-app-chatops/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/tests/: __init__.py  test_api.py  test_api_views.py  test_filter_{{ cookiecutter.model_class_name | lower }}.py
nautobot-app/{{ cookiecutter.project_slug }}/: .dockerignore  .flake8  .gitignore  .git{{''}}ignore  .yamllint.yml  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py  {{ cookiecutter.app_name }}.code-workspace
nautobot-app/{{ cookiecutter.project_slug }}/.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
nautobot-app/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
nautobot-app/{{ cookiecutter.project_slug }}/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
nautobot-app/{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  coverage.yml  prepare_release.yml  rebake.yaml  rebake.yml  release.yml  upstream_testing.yml
nautobot-app/{{ cookiecutter.project_slug }}/development/: Dockerfile  check_migrations.py  docker-compose.base.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.ephemeral-ports.yml  docker-compose.mysql.yml  docker-compose.static-ports.yml  nautobot_config.py  towncrier_template.j2
nautobot-app/{{ cookiecutter.project_slug }}/development/mysql_init/: init.sql
nautobot-app/{{ cookiecutter.project_slug }}/docs/: requirements.txt
nautobot-app/{{ cookiecutter.project_slug }}/docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
nautobot-app/{{ cookiecutter.project_slug }}/docs/admin/release_notes/: version_1.0.md
nautobot-app/{{ cookiecutter.project_slug }}/docs/assets/: extra.css
nautobot-app/{{ cookiecutter.project_slug }}/docs/dev/: contributing.md  dev_environment.md  release_checklist.md
nautobot-app/{{ cookiecutter.project_slug }}/docs/models/: {{ cookiecutter.model_class_name | lower }}.md
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/: __init__.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/api/: __init__.py  serializers.py  urls.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.app_name }}/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_filter_{{ cookiecutter.model_class_name | lower }}.py  test_filters.py  test_form_{{ cookiecutter.model_class_name | lower }}.py  test_forms.py  test_model_{{ cookiecutter.model_class_name | lower }}.py  test_models.py  test_views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.plugin_name }}/: __init__.py  forms.py  navigation.py  tables.py  urls.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.plugin_name }}/api/: __init__.py  serializers.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{ cookiecutter.plugin_name }}/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_model_{{ cookiecutter.model_class_name | lower }}.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.nautobot_app_name}}/: __init__.py  urls.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.nautobot_app_name}}/api/: serializers.py  urls.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.nautobot_app_name}}/tests/: __init__.py  test_api.py  test_api_views.py  test_basic.py  test_views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.plugin_name}}/: __init__.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.plugin_name}}/api/: nested_serializers.py  serializers.py  urls.py  views.py
nautobot-app/{{ cookiecutter.project_slug }}/{{cookiecutter.plugin_name}}/tests/: test_api.py  test_api_views.py  test_basic.py  test_filter_{{ cookiecutter.model_class_name | lower }}.py  test_form_{{ cookiecutter.model_class_name | lower }}.py  test_model_{{ cookiecutter.model_class_name | lower }}.py  test_views.py
(+321 files in other folders)
